tdf#86671: Cancel printing if query is cancelled

cancelling query for mail merge vs. normal printing
should cancel the request

Change-Id: I157778efc9e5db42646fb3ff238a5b6f4c8dccca